# rosetta_bringup

./: README.md  package.xml  setup.cfg  setup.py
launch/: gazebo_world_launch.py  sim_bringup_launch.py  target_spawner_launch.py  teleop_launch.py  turtlebot_client_launch.py  turtlebot_recorder_launch.py  zenoh_launch.py
params/: gazebo_world.yaml  target_spawner.yaml  teleop.yaml  turtlebot_client.yaml  turtlebot_recorder.yaml  zenoh.yaml
