<?xml version="1.0"?>
<package format="3">
  <name>rosetta_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for the Rosetta simulation stack</description>
  <maintainer email="isaac.blankenau@gmail.com">Isaac Blankenau</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosetta</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
